flesh out a few of the TODO markers a bit

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 		<div class="tw-stream-row clearfix">
 			<div class="tw-stream-item-header">
 				<a href="#TODO-profile">
-				  <img src="" class="tw-avatar">
+				  <img src="TODO" class="tw-avatar" alt="TODO">
 				  <strong class="tw-fullname">WPezClasses</strong>
 				  <span class="tw-user-name">@WPezClasses</span>
 				</a>
@@ -87,19 +87,19 @@
 				<div class="tw-stream-item-footer">
 					<div class="tw-action-reply">
 					
-					<a href="TODO">
+					<a href="https://twitter.com/intent/tweet?in_reply_to=TODO" title="Reply">
 					  <span class="tw-cdn-1 tw-icon tw-icon-reply"> </span>
 					</a>
 					
 					</div>
 					<div class="tw-action-retweet">
-					  <a href="TODO">
+					  <a href="https://twitter.com/intent/retweet?tweet_id=TODO" title="Retweet">
 					  <span class="tw-cdn-1 tw-icon tw-icon-retweet"> </span>
 					  <span class="tw-icon tw-icon-retweet-count"> #</span>
 					  </a>					
 					</div>					
 					<div class="tw-action-favorite">
-					<a href="TODO">
+					<a href="https://twitter.com/intent/favorite?tweet_id=TODO" title="Favorite">
 					  <span class="tw-cdn-1 tw-icon tw-icon-favorite"> </span>
 					  <span class="tw-icon tw-icon-favorite-count"> #</span>
 					</a>					
@@ -115,7 +115,7 @@
 		<div class="tw-stream-row clearfix">
 			<div class="tw-stream-item-header">
 				<a href="#TODO-profile">
-				  <img src="" class="tw-avatar">
+				  <img src="TODO" class="tw-avatar" alt="TODO">
 				  <strong class="tw-fullname">WPezClasses</strong>
 				  <span class="tw-user-name">@WPezClasses</span>
 				</a>
@@ -160,7 +160,7 @@
 		<div class="tw-stream-row clearfix">
 			<div class="tw-stream-item-header">
 				<a href="#TODO-profile">
-				  <img src="" class="tw-avatar">
+				  <img src="TODO" class="tw-avatar" alt="TODO">
 				  <strong class="tw-fullname">WPezClasses</strong>
 				  <span class="tw-user-name">@WPezClasses</span>
 				</a>
@@ -205,7 +205,7 @@
 		<div class="tw-stream-row clearfix">
 			<div class="tw-stream-item-header">
 				<a href="#TODO-profile">
-				  <img src="" class="tw-avatar">
+				 <img src="TODO" class="tw-avatar" alt="TODO">
 				  <strong class="tw-fullname">WPezClasses</strong>
 				  <span class="tw-user-name">@WPezClasses</span>
 				</a>
@@ -250,7 +250,7 @@
 	</div>
 	
 	<div class="tw-footer">
-		<a href="TODO">
+		<a href="https://twitter.com/intent/tweet?screen_name=TODO">
 		Tweet to @WPezClasses
 		</a>
 	</div>
